= Changelog

The file documents the changes to this library over the different versions.

- ChunkyPNG uses semantic versioning. This means that the public API will not change except for major versions.
- Please add an entry to the "Unreleased changes" section in your pull requests, so I can move them into a numbered version section on release.

=== Unreleased changes

=== 1.4.0 - 2020-12-28

- Add compatibility for Ruby 3.0. 

=== 1.3.14 - 2018-11-21

- Fix Canvas#inspect to not modify frozen string literal.

=== 1.3.13 - 2018-11-21

- Add <tt>frozen-string-literal: true</tt> to all source files.
- Remove some backfills that were needed only for Ruby 1.8 compatibility.

=== 1.3.12 - 2018-11-21

- Implemented <tt>ChunkyPNG::Dimension#hash</tt> to fix some specs after a behavior change in RSpec.

=== 1.3.11 - 2018-11-21

- Updated project metadata as published on Rubygems.org

=== 1.3.10 - 2018-01-23

- Fixed a regression in Datastream#metadata, which was not able to deal with iTXt chunks.

=== 1.3.9 - 2018-01-23

- Add support for reading and writing an international textual data (iTXt chunks).

=== 1.3.8 - 2016-08-31

- Add support for reading and writing an image's physical dimension (pHYs chunks).

=== 1.3.7 - 2016-08-31

- Performance improvement for <tt>Color.euclidean_distance_rgba</tt>.
- Bugfix in decoding transparent pixels when decoding multiple images in a row.

=== 1.3.6 - 2016-06-19

- Allow reading images from streams that have trailing data after the IEND chunk.
- Add compatibility for Ruby 2.3's frozen string literals.
- Documentation updates and small cleanups.

=== 1.3.5 - 2015-10-28

- Performance improvements for <tt>Canvas#crop!</tt> and <tt>ImageData.combine_chunks</tt>
- Update <tt>chunky_png/rmagick</tt> to work with the latest versions of RMagick.
- Bugfix in <tt>Color#from_hsl</tt> and <tt>Color#from_hsv</tt> when hue value is 360.
- Fix encoding issue in <tt>Datastream#to_blob</tt>

=== 1.3.4 - 2015-02-16
