@@ -7,6 +7,8 @@ The file documents the changes to this library over the different versions.
 
 === Unreleased changes
 
+- Fixed functionality of #from_file within non-main Ractors.
+
 === 1.4.0 - 2020-12-28
 
 - Add compatibility for Ruby 3.0. 
